--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -82,6 +82,7 @@
     <!-- endbower -->
     <!-- Manually add additional files -->
     <script src="bower_components/momentjs/lang/fr.js"></script>
+    <script src="bower_components/angular-i18n/angular-locale_fr.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
